hphp/hack/test/typecheck/fc_enum_9.php.rust_elab.exp
File "fc_enum_9.php", line 3, characters 6-8:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
File "fc_enum_9.php", line 13, characters 10-25:
Invalid return type (Typing[4110])
  File "fc_enum_9.php", line 12, characters 42-44:
  Expected `int`
  File "fc_enum_9.php", line 3, characters 6-8:
  But got `arraykey` arising from an implicit `as arraykey` constraint on this type
